# balloon-popper-demo

./: .envrc  .gitignore  .yamllint  404.html  LICENSE  README.md  Taskfile.yml  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  generator-image.yml
.streamlit/: config.toml
catalog_setup/: index.html
color_analysis/: index.html
config/: cluster-config.yaml
dashboards/: index.html
docs/: catalog_setup.md  color_analysis.md  dashboards.md  iceberg_schema_design.md  implementing_data_pipeline.md  index.md  leaderboard.md  local_cloud.md  performance_trends.md  run_app.md  setup.md  source_and_sinks.md  summary.md  troubleshooting.md  verifying_data_pipeline.md
generator/: Dockerfile  balloon_popper.py  logger.py  models.py  pyproject.toml  requirements.txt
iceberg_schema_design/: index.html
implementing_data_pipeline/: index.html
k8s/features/: adminer.yaml  kafka-cluster.yaml
k8s/generator/: deployment.yaml  kustomization.yaml
k8s/polaris/: deployment.yaml  kustomization.yaml  rbac.yaml  sa.yaml  service.yaml
leaderboard/: index.html
local_cloud/: index.html
notebooks/: trino_workbook.ipynb  verify_setup.ipynb  workbook.ipynb
performance_trends/: index.html
polaris-forge-setup/: catalog_cleanup.yml  catalog_setup.yml  cluster_checks.yml  generate_source_sinks.yml  prepare.yml
run_app/: index.html
scripts/: create_tables.py  setup.sh
setup/: index.html
source_and_sinks/: index.html
summary/: index.html
troubleshooting/: index.html
verifying_data_pipeline/: index.html
(+15 files in other folders)
