[project]
name = "balloon-popper-demo"
version = "0.0.1"
description = "A balloon game demo show how realtime analytics works with Iceberg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.3.0",
    "awscli-local>=0.22.0",
    "cryptography>=44.0.0",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow==18.1.0",
    "pydantic>=2.10.6",
    "pyiceberg[s3fs]>=0.8.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ansible>=11.2.0",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kubernetes>=32.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "notebook>=7.3.2",
    "ruff>=0.9.6",
    "watchdog>=6.0.0",
    "yamllint>=1.35.1",
]

[tool.uv.sources]
common = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
